@@ -47,18 +47,26 @@ KFileDetailList::KFileDetailList(bool s, QDir::SortSpec sorting,
     text = i18n("Group");
     addColumn(text);
 
-    QListView::setSorting(-1);
+    QListView::setSorting( 0 );
 
-    //    connect(this,SIGNAL(selectionChanged(QListViewItem*)),
-    //	    SLOT(selected(QListViewItem*)));
-    //    connect(this, SIGNAL(highlighted(int,int)), SLOT(highlighted(int)));
-    connect( this, SIGNAL(returnPressed(QListViewItem *)), 
+    // enable header-clicking (sorting) only for name, size and time columns
+    QHeader *h = header();
+    h->setClickEnabled( false, -1 );
+    h->setClickEnabled( true, 0 );
+    h->setClickEnabled( true, 1 );
+    h->setClickEnabled( true, 3 );
+
+    KFileInfoContents::setSortMode( KFileInfoContents::Switching );
+
+    connect( this, SIGNAL(returnPressed(QListViewItem *)),
 	     SLOT(selected(QListViewItem *)) );
     connect( this, SIGNAL(doubleClicked(QListViewItem *)),
 	     SLOT(selected(QListViewItem *)) );
     connect( this, SIGNAL(clicked(QListViewItem *)),
 	     SLOT(singleClicked(QListViewItem *)) );
-    connect(header(), SIGNAL(sectionClicked(int)), SLOT(reorderFiles(int)));
+    connect( this, SIGNAL(selectionChanged(QListViewItem *)),
+	     this, SLOT(highlighted(QListViewItem *)) );
+    connect( h, SIGNAL(sectionClicked(int)), SLOT(reorderFiles(int)));
 }
 
 void KFileDetailList::repaint(bool)
@@ -85,6 +93,7 @@ void KFileDetailList::highlightItem(unsigned int i)
 
 void KFileDetailList::clearView()
 {
+  mapper.clear();
   QListView::clear();
 }
 
@@ -93,28 +102,32 @@ void KFileDetailList::reorderFiles(int inColumn)
 {
     QDir::SortSpec new_sort;
 
-    // QDir::SortSpec oldFlags = sorting() & (~QDir::SortByMask);
+    QDir::SortSpec oldFlags = (QDir::SortSpec) (sorting() & QDir::SortByMask);
 
     switch ( inColumn ) {
     case 0:
-	new_sort = QDir::Name;
+        new_sort = (QDir::SortSpec) (oldFlags | QDir::Name 
+				     & ~(QDir::Size | QDir::Time));
 	break;
     case 1:
-	new_sort = QDir::Size;
+        new_sort = (QDir::SortSpec) (oldFlags | QDir::Size
+				     & ~(QDir::Name | QDir::Time));
 	break;
     case 3:
-	new_sort = QDir::Time;
+        new_sort = (QDir::SortSpec) (oldFlags | QDir::Time
+				     & ~(QDir::Name | QDir::Size));
 	break;
     default:
 	return;
     }
 
+    QListView::setSorting( inColumn );
+    KFileInfoContents::setSortMode( KFileInfoContents::Switching );
     KFileInfoContents::setSorting(new_sort);
 }
 
-bool KFileDetailList::insertItem(const KFileInfo *i, int /* index */)
+bool KFileDetailList::insertItem(const KFileInfo *i, int index )
 {
-  // WABA: Why is index not used?
   QPixmap type;
 
   if (i->isDir())
@@ -130,43 +143,107 @@ bool KFileDetailList::insertItem(const KFileInfo *i, int /* index */)
       }
     }
 
-  QListViewItem *item = new QListViewItem(this,
-					  i->fileName(),
-					  QString::number(i->size()),
-					  i->access(), i->date(),
-					  i->owner(), i->group());
+  KFileListViewItem *item = new KFileListViewItem(this,
+						  i->fileName(),
+						  QString::number(i->size()),
+						  i->access(), i->date(),
+						  i->owner(), i->group());
   item->setPixmap(0, type);
-// WABA: I was told the following call is redundant
-//  QListView::insertItem(item);
+  mapper.insert( (KFileInfo*) i, item );
+  updateItems( index ); // maybe delay this call thru a timer?
 
   // TODO: find out, if a repaint is really necessary
   return true;
 }
 
-void KFileDetailList::selected(QListViewItem *s)
+
+// ugly (but necessary) hack: set the key for sorting for the items over and
+// over again, because KFileInfoContents tells us: "insert this item at this
+// position" - but QListView can only arrange items by a sorting key.
+// So if KFileInfoContents wants us to insert an item at position 3, which is
+// already occupied, well, all items above must be raised about one position
+void KFileDetailList::updateItems( int index )
 {
-  QListViewItem *item = firstChild();
-  int i;
-  for (i = 0; i < childCount() && item; i++) {
-    if (item == s)
-      break;
-    item = item->nextSibling();
+  int cnt = KFileInfoContents::count();
+  for ( int i = index; i < cnt; i++ ) {
+    KFileInfo *fi = (KFileInfo *) at( i );
+    ItemMapper::Iterator it = mapper.find( fi );
+    if ( it != mapper.end() ) {
+      KFileListViewItem *item = (KFileListViewItem *) it.data();
+      if ( item )
+	item->setIndex( i );
+    }
   }
-  select(i);
 }
 
-void KFileDetailList::highlighted(int row)
+
+void KFileDetailList::selected( QListViewItem *item )
 {
-    highlight(row);
+  KFileInfo *fi = kfileInfoItem( item );
+  if ( fi && fi->isDir() ) {
+    select(fi);
+    setContentsPos(0, 0); // scroll to top left
+  }
 }
 
+void KFileDetailList::highlighted( QListViewItem *item )
+{
+  KFileInfo *fi = kfileInfoItem( item );
+  if ( fi )
+    highlight( fi );
+}
 
 void KFileDetailList::singleClicked( QListViewItem *item )
 {
   if ( useSingle() )
      selected( item );
 }
-    
-    
-#include "kfiledetaillist.moc"
 
+
+// helper function - maps from QListViewItem to KFileInfo
+KFileInfo * KFileDetailList::kfileInfoItem( const QListViewItem *lvi )
+{
+  if ( !lvi )
+    return 0L;
+
+  int i;
+  QListViewItem *item = firstChild();
+  for (i = 0; i < childCount() && item; i++) {
+    if (item == lvi)
+      break;
+    item = item->nextSibling();
+  }
+
+  return (KFileInfo *) KFileInfoContents::at( i );
+}
+
+
+
+// helper wrapper for correct sorting
+KFileListViewItem::KFileListViewItem( QListView *parent, QString label1,
+				      QString label2, QString label3,
+				      QString label4, QString label5,
+				      QString label6 )
+  : QListViewItem( parent, label1, label2, label3, label4, label5, label6 )
+{
+  myKey = "";
+}
+
+void KFileListViewItem::setIndex( int i )
+{
+  // ARGHHH, hack alert: QListView sorts alphabetically, so a key
+  // 11 would be smaller than 2
+  // So we just fill a string with n+1 characters (A for now)
+  // If anyone comes up with a better idea PLEASE FIX THIS!
+
+  myKey.fill( 65, i+1 );
+}
+
+
+QString KFileListViewItem::key( int, bool ) const
+{
+  return myKey;
+}
+
+
+#include "kfiledetaillist.moc"
